# NewareNDA

./: CHANGELOG.md  LICENSE  NewareNDA.py  README.md  pyproject.toml  setup.py
.github/workflows/: NewareNDA_pytest.yml
NewareNDA/: NewareNDA.py  NewareNDAcli.py  NewareNDAx.py  __init__.py  __main__.py  dicts.py  utils.py  version.py
tests/: README.md  conftest.py  test_NewareNDA.py
tests/nda/github/Issue60/: BTS85-36-6-5-110-20240424.ndax
tests/nda/github/Issue72/: TestFile.nda
tests/nda/github/Issue94/: 123456789012_Unit27_Example_Data_File.ndax
tests/nda/mediafire/: 2-1-6_61[07005012].nda
tests/reference/: 123456789012_Unit27_Example_Data_File.ftr  2-1-6_61[07005012].ftr  SIM.ftr  TestFile.ftr  new_nda_file.ftr
tests/reference_cycle_mode_auto/: 2-1-6_61[07005012].ftr  SIM.ftr  new_nda_file.ftr
tests/reference_cycle_mode_dchg/: TestFile.ftr
